ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.tyutytu.tk
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80
